# tinysweeper

./: .bazelproject  .clang-format  .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build.yml  check-markdown.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts  versions.bzl
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/tinysweeper/: build.gradle.kts
android/tinysweeper/src/androidTest/java/com/squareup/tinysweeper/: ExampleInstrumentedTest.kt
android/tinysweeper/src/main/java/com/squareup/tinysweeper/: AntiTamperClock.kt  BootIdProvider.kt  DetectionDispatcher.kt  DetectionTimer.kt  Detector.kt  IdProvider.kt  InstallationIdProvider.kt  Policy.kt  TSConstants.kt  Tinysweeper.kt
android/tinysweeper/src/main/java/com/squareup/tinysweeper/detections/: AndroidKeyAttestor.kt  DeveloperModeDetection.kt  PlayIntegrityDetection.kt
android/tinysweeper/src/main/java/com/squareup/tinysweeper/network/: ChallengeClient.kt
android/tinysweeper/src/test/java/com/squareup/tinysweeper/: DetectionTest.kt  JitterTimerTest.kt
android/tinysweeper/src/test/java/com/squareup/tinysweeper/detections/: AndroidKeyAttestorTest.kt  PlayIntegrityDetectionTest.kt
android/tinysweeper/src/test/java/com/squareup/tinysweeper/testutils/: MutableFixedClock.kt  TestDetector.kt
android/tsengine/src/main/: BUILD.bazel
android/tsengine/src/main/java/com/squareup/tinysweeper/tsengine/: AntiTamperClock.kt  BootIdProvider.kt  DetectionDispatcher.kt  DetectionTimer.kt  Detector.kt  IdProvider.kt  InstallationIdProvider.kt  Policy.kt  TSConstants.kt  Tinysweeper.kt
android/tsengine/src/main/java/com/squareup/tinysweeper/tsengine/detections/: AndroidKeyAttestor.kt  CameraDetection.kt  DeveloperModeDetection.kt  PlayIntegrityDetection.kt
android/tsengine/src/main/java/com/squareup/tinysweeper/tsengine/network/: ChallengeClient.kt
android/tsengine/src/main/java/com/tinysweeper/tsengine/: AntiTamperClock.kt  BootIdProvider.kt  DetectionDispatcher.kt  DetectionTimer.kt  Detector.kt  IdProvider.kt  InstallationIdProvider.kt  Policy.kt  TSConstants.kt  Tinysweeper.kt
android/tsengine/src/main/java/com/tinysweeper/tsengine/detections/: DeveloperModeDetection.kt  PlayIntegrityDetection.kt
android/tsengine/src/main/java/com/tinysweeper/tsengine/network/: ChallengeClient.kt
android/tsengine/src/test/: BUILD.bazel
android/tsengine/src/test/java/com/squareup/tinysweeper/tsengine/: DetectionTest.kt  JitterTimerTest.kt  TinysweeperTest.kt
android/tsengine/src/test/java/com/squareup/tinysweeper/tsengine/detections/: AndroidKeyAttestorTest.kt  PlayIntegrityDetectionTest.kt
android/tsengine/src/test/java/com/squareup/tinysweeper/tsengine/testutils/: MutableFixedClock.kt  TestDetector.kt
android/tsengine/src/test/java/com/tinysweeper/tsengine/: DetectionTest.kt  JitterTimerTest.kt  TinysweeperTest.kt
android/tsengine/src/test/java/com/tinysweeper/tsengine/detections/: PlayIntegrityDetectionTest.kt
android/tsengine/src/test/java/com/tinysweeper/tsengine/testutils/: MutableFixedClock.kt  TestDetector.kt
proto/squareup/lando/challenge/: BUILD.bazel  challenge.proto
proto/squareup/tinysweeper/android/: BUILD.bazel  tinysweeper.proto
scripts/: bazel_tests.sh
testutils/: BUILD.bazel  test_manifest.xml  testutils.bzl
