###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "tinysweeper",
    version = "1.1.0",
)

bazel_dep(name = "rules_java", version = "7.3.2")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_kotlin", version = "1.9.5")
bazel_dep(name = "rules_jvm_external", version = "6.1")
bazel_dep(name = "rules_go", version = "0.47.1")
bazel_dep(name = "rules_robolectric", version = "4.12.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "androidx.core:core-ktx:1.13.1",
        "com.google.protobuf:protobuf-java:3.16.3",
        "com.google.android.play:integrity:1.3.0",
        "com.google.android.gms:play-services-base:18.3.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3",
        "com.squareup.retrofit2:retrofit:2.8.1",
        "com.squareup.retrofit2:converter-protobuf:2.11.0",
        "com.squareup.okhttp3:okhttp:4.9.3",
        "com.squareup.okhttp3:logging-interceptor:4.9.3",

        # TODO: We have to support SDK 24 internally without desugaring,
        # which requires using this backport of java.time APIs.
        "com.jakewharton.threetenabp:threetenabp:1.4.4",
        "org.threeten:threetenbp:1.6.5",

        # Test artifacts
        "junit:junit:4.13.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3",
        "org.mockito.kotlin:mockito-kotlin:4.1.0",
        "org.robolectric:robolectric:4.12.2",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
