load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "challenge_proto",
    srcs = ["challenge.proto"],
)

java_proto_library(
    name = "challenge_java_proto",
    deps = [":challenge_proto"],
)

go_proto_library(
    name = "challenge_go_proto",
    proto = ":challenge_proto",
)
