load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "tinysweeper_proto",
    srcs = ["tinysweeper.proto"],
)

java_proto_library(
    name = "tinysweeper_java_proto",
    deps = [":tinysweeper_proto"],
)
